--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -1,15 +1,9 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <title>Ruby on Rails Tutorial Sample App | About</title>
-  </head>
-  <body>
-    <h1>About</h1>
-    <p>
-      Get help on the Ruby on Rails Tutorial at the
-      <a href="http://railstutorial.org/help">Rails Tutorial help page</a>.
-      To get help on this sample app, see the
-      <a href="http://railstutorial.org/book">Rails Tutorial book</a>.
-    </p>
-  </body>
-</html>
+<% provide(:title, 'About') %>
+
+<h1>About</h1>
+<p>
+  This is the about page on Rails Tutorial at the
+  <a href="http://railstutorial.org/about">Rails Tutorial about page</a>.
+  To get help on this sample app, see the
+  <a href="http://railstutorial.org/book">Rails Tutorial book</a>.
+</p>
