--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,7 +1,7 @@
 <footer class="footer">
   <small>
     <a href="http://railstutorial.org/">Rails Tutorial</a>
-    by Michael Hartl
+    recreated by James Youn
   </small>
   <nav>
     <ul class="nav pull-right">
